samples/_failures_safe/1761331981_9e60e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed743376.c:179: error: expected ‘;’, ‘,’ or ‘)’ at end of input
